--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <button class="btn"> Button</button>
 
     <br>
-    <div class="g-box"><marquee behavior="scroll" scrollamount="2" direction="left">lorem5</marquee></div>
+    <div class="g-box"><marquee behavior="scroll" scrollamount="2"  loop="5" direction="left">lorem5</marquee></div>
 </body>
 </html>
